ajustado endpoint de metricas adicionando um basic auth
