# src/docs/swagger.json
@@ -7,10 +7,10 @@
   },
   "servers": [
     {
-      "url": "http://dev.lobatoconecta.com.br/"
+      "url": "http://horariodeonibusml.com.br/"
     },
     {
-      "url": "https://dev.lobatoconecta.com.br/"
+      "url": "https://horariodeonibusml.com.br/"
     }
   ],
   "tags": [
@@ -1942,7 +1942,12 @@
         ],
         "description": "",
         "parameters": [],
-        "responses": {}
+        "responses": {},
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/api-bus-schedules/api/v1/ways/create": {
@@ -1964,7 +1969,12 @@
           "401": {
             "description": "Unauthorized"
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/api-bus-schedules/api/v1/ways/delete": {
@@ -1986,7 +1996,12 @@
           "401": {
             "description": "Unauthorized"
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/api-bus-schedules/api/v1/maps/list": {
@@ -1996,7 +2011,11 @@
         ],
         "description": "",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
       }
     }
   },
